# centralised-ai

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  common_types.h  reward_to_go_2024-12-09_11-20-57.csv  reward_to_go_2024-12-09_11-32-38.csv  reward_to_go_2024-12-09_17-50-18.csv
Python_simulation/Football_sim/: Ai_model copy.py  Ai_model.py  EnvFootball.py  Field.py  Player_class.py
Python_simulation/Mappo_Test/: EnvFootball.py  Example_mappo.py  Mappo.py  Player_class.py
Python_simulation/runs/24-10-01_14-24-24-372793_MAPPO/: events.out.tfevents.1727785465.viktor-Katana-15-B13VGK.21091.0
docs/manual/: changelog.md  developer_guide.md  user_guide.md
losses/: losses_2024-12-25_10-06-08.csv
models/: agent_network0.pt  agent_network1.pt  agent_network2.pt  agent_network3.pt  agent_network4.pt  agent_network5.pt  critic_network.pt
models/old_agents/: agent_network0.pt  agent_network1.pt  agent_network2.pt  agent_network3.pt  agent_network4.pt  agent_network5.pt  critic_network.pt
rewards/: reward_2024-12-09_14-02-07.csv  reward_2024-12-10_09-16-59.csv  reward_2024-12-10_10-49-46.csv  reward_2024-12-10_13-21-06.csv  reward_2024-12-10_14-35-43.csv  reward_2024-12-10_15-30-16.csv  reward_2024-12-10_15-40-28.csv  reward_2024-12-10_15-52-41.csv  reward_2024-12-10_16-10-55.csv  reward_2024-12-10_16-19-45.csv  reward_2024-12-13_13-12-02.csv  reward_2024-12-13_13-12-47.csv  reward_2024-12-25_09-34-30.csv  reward_2024-12-25_09-38-35.csv  reward_2024-12-25_09-52-48.csv  reward_2024-12-25_10-06-08.csv
src/: CMakeLists.txt  common_types.h  main.cc
src/ai-module/: communication.cc  demo_run.cc  mappo.cc  mappo.h  network.cc  network.h
src/centralised-ai/: CMakeLists.txt  Communication.cc  Communication.h  MAPPO.cc  MAPPO.h  communication.cc  communication.h  demo_run.cc  main.cc  mappo.cc  mappo.h  network.cc  network.h  networks.h
src/collective-robot-behaviour/: CMakeLists.txt  communication.cc  communication.h  config.h  evaluation.cc  evaluation.h  mappo.cc  mappo.h  mlp.cc  mlp.h  network.cc  network.h  reward.cc  reward.h  run_state.cc  run_state.h  state.h  utils.cc  utils.h  world.cc  world.h  world_setup.py
src/simulation-interface/: simulation_interface.cc  simulation_interface.h  simulation_interface_demo.cc
src/ssl-interface/: CMakeLists.txt  automated_referee.cc  automated_referee.h  automated_referee_demo.cc  referee_command_functions.cc  referee_command_functions.h  simulation_reset.cc  simulation_reset.h  ssl_automated_referee.cc  ssl_automated_referee.h  ssl_automated_referee_demo.cc  ssl_game_controller_client.cc  ssl_game_controller_client.h  ssl_game_controller_client_demo.cc  ssl_vision_client.cc  ssl_vision_client.h  ssl_vision_client_demo.cc
src/ssl-interface/proto/: grsim_commands.proto  grsim_replacement.proto  ssl_gc_common.proto  ssl_gc_game_event.proto  ssl_gc_geometry.proto  ssl_gc_referee_message.proto  ssl_vision_detection.proto  ssl_vision_geometry.proto  ssl_vision_wrapper.proto
test/: CMakeLists.txt  main_test.cc  main_test_exe[1]_include.cmake
test/collective-robot-behaviour-test/: CMakeCache.txt  CTestTestfile.cmake  communication_test.cc  mappo_test.c  mappo_test.cc  mlp_test.cc  network_test.cc  run_state_test.cc  utils_test.cc  world_test.cc
test/simulation-interface-test/: simulation_interface_test.cc
test/ssl-interface/: ssl_vision_client_test.cc
test/ssl-interface-test/: automated_referee_test.cc  ssl_game_controller_client_test.cc  ssl_vision_client_test.cc  ssl_vission_client_testt.cc  temp.cc
tests/: CMakeLists.txt
tests/collective-robot-behaviour-test/: Makefile  cmake_install.cmake  world_test.cc
